# TensorRT_Orin

./: README.md
tensorRT_YOLOV8/: CMakeLists.txt
tensorRT_YOLOV8/include/: InferenceEngine.h  Logger.h  MyCustomPlugin.h  PluginRegistrar.h  camera.h  tensorRTModel.h
tensorRT_YOLOV8/src/: InferenceEngine.cpp  MyCustomPlugin.cpp  camera.cpp  main.cpp  tensorRTModel.cpp
